--- a/portal/src/main/resources/public/admin/css/modules.less
+++ b/portal/src/main/resources/public/admin/css/modules.less
@@ -2278,3 +2278,19 @@ top-notification{
         }
     }
 }
+
+div.flex-box-container{
+    display: flex;
+    flex-wrap: wrap;
+
+    > div {
+        margin: 10px;
+        border: 1px solid #444;
+        border-radius: 10px;
+        padding: 5px 10px;
+    }
+}
+
+.horizontal-margin{
+    margin: 0px 10px;
+}
