--- a/portal/src/main/resources/public/admin/red/theme.css
+++ b/portal/src/main/resources/public/admin/red/theme.css
@@ -2199,3 +2199,16 @@ top-notification div.notify-top-actions > span {
 top-notification div.notify-top-actions > span:hover {
   border-color: #FF483E;
 }
+div.flex-box-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+div.flex-box-container > div {
+  margin: 10px;
+  border: 1px solid #444;
+  border-radius: 10px;
+  padding: 5px 10px;
+}
+.horizontal-margin {
+  margin: 0px 10px;
+}
